# unifi-exporter

./: .gitignore  Cargo.toml  Containerfile  README.md
.github/workflows/: build-and-deploy.yml
manifests/: unifi-exporter-deployment.yaml  unifi-exporter-service.yaml  unifi-exporter-servicemonitor.yaml  unifi-secret.yaml
src/: exporter.rs  main.rs  unifi.rs
