[package]
name = "unifi-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "cookies"] }
arg = "0.4.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
url = "2.5.4"
prometheus = "0.14.0"
actix-web = "4.12.1"
